--- a/templates/apple_stock/TemplateChartjs.html
+++ b/templates/apple_stock/TemplateChartjs.html
@@ -370,7 +370,9 @@
     window.addEventListener('resize', () => chart.resize());
     const API_BASE = '/AppleStockChecker';
     const ENDPOINT_SHOPS= `${API_BASE}/secondhand-shops/`
-    const ENDPOINT_SHOPS= `${API_BASE}/iphones/`
+    const ENDPOINT_IPHONES= `${API_BASE}/iphones/`
+    {#const ENDPOINT_SHOPS = "https://verbless-sadistically-jayceon.ngrok-free.dev/AppleStockChecker/secondhand-shops/";#}
+    {#const ENDPOINT_IPHONES = "https://verbless-sadistically-jayceon.ngrok-free.dev/AppleStockChecker/iphones/";#}
 
     async function loadShops() {
         const box = $('shops');
